added delete button

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -10,4 +10,8 @@
 <div>
  <%= link_to "Show this article", @article %> |
  <%= link_to "Back to articles", articles_path %>
+ <%= link_to "Delete this article", article_path(@article), data: {
+turbo_method: :delete,
+turbo_confirm: "Are you sure you want to delete the article?"
+} %>
 </div>
