--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,11 +4,11 @@
 <div class="text-2xl">Articles</div>
 <% @articles.each do |article| %>
  <%= render partial: "article", locals: { article: article } %>
+ <%= link_to "Delete", article_path(article), data: {
+turbo_method: :delete,
+turbo_confirm: "Are you sure?"
+} %>
 <% end %>
 
 
 <%= link_to 'New Article', new_article_path %>
-<%= link_to 'Delete', new_article_path(@article), data: {
-                    turbo_method: :delete,
-                    turbo_confirm: "Are you sure?"
-                  } %>
