--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,3 +7,7 @@
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back to Articles', articles_path %>
+<%= link_to "Delete this article", articles_path(@article), data: {
+turbo_method: :delete,
+turbo_confirm: "Are you sure you want to delete the article?"
+} %>
