added style to articles layout

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-2xl">New article</h1>
+<h1 class="text-2xl text-sky-400">New article</h1>
 
 
 <%= render "form", article: @article %>
