--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,24 +1,23 @@
 <p><%= notice %></p>
 
 <div class="container m-auto p-4">
-  <h1 class="text-2xl text-center">Articles</h1>
+  <h1 class="text-2xl text-center font-bold">Articles</h1>
+<button class="bg-blue-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
+ <%= link_to 'New Article', new_article_path %>
+</button>
 
-
-  <button class="bg-green font-bold py-2 px-4 rounded-full">
-    <%= link_to 'New Article', new_article_path %>
-  </button>
 </div>
 
-<table class="table-fixed">
+<table class="table-auto">
  <thead>
-      <tr class="bg-slate">
-        <th class="">Title</th>
-        <th class="">Text</th>
-        <th class="">Status</th>
-        <th class="">Actions</th>
+      <tr>
+        <th>Title</th>
+        <th>Text</th>
+        <th>Status</th>
+        <th>Actions</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class="table-auto">
       <% @articles.each do |article| %>
         <%= render partial: "article", locals: { article: article } %>
       <% end %>
