added image display

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -29,6 +29,13 @@
    <%= form.label :published %>
    <%= form.check_box :published %>
  </div>
+
+
+ <div class="field">
+ <%= form.file_field :image %>
+ </div>
+
+
  <div class="actions">
    <%= form.submit %>
  </div>
