--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,24 +1,25 @@
-<tr class="text-center">
-  <td><%= article.title %></td>
-  <td ><%= article.body %></td>
-  <td ><%= article.published ? 'Published' : 'Draft' %></td>
-  
-  <% if article.image.attached? %>
-  <td><%= image_tag article.image.variant(resize_to_fit: [200, 200]) %></td>
-  <% end %>
-  
-  <td>
-    <button class="bg-transparent hover:bg-green-500 text-green-500 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded">
+<div class="flex flex-col bg-white border shadow-lg rounded-lg">
+  <h3 class="text-lg font-bold text-gray-800">
+      <%= article.title %>
+  </h3>
+  <p class="mt-1 text-xs font-medium uppercase text-gray-500">
+    <%= article.body %>
+  </p>
+  <p class="mt-2 text-gray-500">
+<%= article.published ? 'Published' : 'Draft' %>  </p>
+      <button class="bg-transparent hover:bg-green-500 text-green-500 font-semibold hover:text-white py-2 px-4 border border-green-500 hover:border-transparent rounded">
  <%= link_to 'Show', article_path(article) %>
+ <%= heroicon_tag "eye" %>
 </button>
       <button class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
  <%= link_to 'Edit', edit_article_path(article) %>
+ <%= heroicon_tag "pencil" %>
 </button>
-
   <button class="bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-2 px-4 border border-red-500 hover:border-transparent rounded">
   <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete the article?" } %>
+<%= heroicon_tag "trash" %>
 </button>
-    
-   
-  </td>
-</tr>
+  <% if article.image.attached? %>
+  <td><%= image_tag article.image.variant(resize_to_fit: [200, 200]) %></td>
+  <% end %>
+</div>
