--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 grid grid-rows-4">
+    <main class="container mx-auto px-5 grid grid-rows-4">
       <%= yield %>
     </main>
   </body>
