Set environment to dev mode and add some css classes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
   </head>
 
-  <body>
-    <main class="container mx-auto px-5 grid grid-rows-4">
+  <body class="h-screen bg-gradient-to-b from-green-200 to-green-500">
+    <main class="container bg-red mx-auto px-5">
       <%= yield %>
     </main>
   </body>
