--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,12 @@
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
   </head>
 
-  <body class="h-screen bg-gradient-to-b from-green-200 to-green-500">
-    <main class="container bg-red mx-auto px-5">
+  <body>
+    <br>
+    <main class="container mx-auto px-5">
       <%= yield %>
+        
     </main>
+  
   </body>
 </html>
