--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,10 +1,12 @@
-<div class="container m-auto p-4">
-  <h1 class="text-2xl text-center font-bold text-gray-100">Articles</h1>
+<div class="container">
+  <h1 class="text-2xl text-center font-bold">Articles</h1>
 <button class="bg-blue-400 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full">
  <%= link_to 'New Article', new_article_path %>
 </button>
 </div>
+<br>
        <% @articles.each do |article| %>
         <%= render partial: "article", locals: { article: article } %>
       <% end %>
+
 
