--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,12 +1,6 @@
-<h1 class="text-2xl text-sky-400">New article</h1>
-
-
-<%= render "form", article: @article %>
-
-
+<div class="grid items-center justify-between bg-white border shadow-lg rounded-lg w-30 p-4 mt-5">
+        <h3 class="mb-2 text-2xl font-bold tracking-tight text-sky-400 text-center">New article</h3>
+        <%= render "form", article: @article %>
+         <%= link_to "Back to articles", articles_path, class:"p-4 font-bold text-green-500" %>
 <br>
-
-
-<div>
- <%= link_to "Back to articles", articles_path %>
 </div>
