--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,29 +1,43 @@
-<div class="grid items-center justify-between bg-white border shadow-lg rounded-lg w-30 p-4 mt-5">
-  <div class="grid grid-cols-2">
-    <h3 class="text-lg font-bold">
+<div class="grid place-items-center bg-white border shadow-lg rounded-lg w-30 p-4 mt-5 ml-96 max-w-2xl">
+  <div class="grid grid-cols-6 gap-3">
+    <h3 class="col-span-4 text-lg font-bold">
       <%= article.title %>
     </h3>
-  <p class="mt-1 text-xs font-medium uppercase text-gray-500">
-    <%= article.body %>
-  </p>
-  <p class="mt-2 text-gray-500">
-    <%= article.published ? 'Published' : 'Draft' %>
-  </p>
+   
+    <p class="mt-1 text-xs font-medium uppercase text-gray-500 col-span-6">
+      <%= article.body %>
+    </p>
+    <p class="mt-2 text-gray-500 col-span-6">
+      <%= article.published ? 'Published' : 'Draft' %>
+    </p>
     <% if article.image.attached? %>
-      <%= image_tag article.image.variant(resize_to_fit: [100, 100]) %>
+      <%= image_tag article.image.variant(resize_to_fit: [100, 100]), class: "col-span-6" %>
     <% end %>
-      <button type="button" class="bg-transparent hover:bg-green-500 text-green-500 font-semibold hover:text-white py-2 px-3 border border-green-500 hover:border-transparent rounded text-sm">
+     
+  </div>
+  <div class="col-span-6 flex justify-end space-x-4 mt-4">
+      <button type="button" class="bg-transparent hover:bg-green-500 text-green-500 font-semibold hover:text-white py-2 px-3 border border-green-500 hover:border-transparent rounded text-xs flex items-center">
         <%= link_to 'Show', article_path(article) %>
-        <%= heroicon_tag "eye" %>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" fill="currentColor" class="size-6 ml-2 w-5 h-5">
+          <path d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+          <path fill-rule="evenodd" d="M1.323 11.447C2.811 6.976 7.028 3.75 12.001 3.75c4.97 0 9.185 3.223 10.675 7.69.12.362.12.752 0 1.113-1.487 4.471-5.705 7.697-10.677 7.697-4.97 0-9.186-3.223-10.675-7.69a1.762 1.762 0 0 1 0-1.113ZM17.25 12a5.25 5.25 0 1 1-10.5 0 5.25 5.25 0 0 1 10.5 0Z" clip-rule="evenodd" />
+        </svg>
       </button>
-      <button type="button" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-3 border border-blue-500 hover:border-transparent rounded text-sm">
+      <button type="button" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-3 border border-blue-500 hover:border-transparent rounded text-xs flex items-center">
         <%= link_to 'Edit', edit_article_path(article) %>
-        <%= heroicon_tag "pencil" %>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" fill="currentColor" class="size-6 ml-2 w-5 h-5">
+          <path d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z" />
+        </svg>
       </button>
-      <button type="button" class="bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-2 px-3 border border-red-500 hover:border-transparent rounded text-sm">
+      <div class="mx-auto">
+      <button type="button" class="bg-transparent hover:bg-red-500 text-red-500 font-semibold hover:text-white py-2 px-3 border border-red-500 hover:border-transparent rounded text-xs flex items-center">
         <%= link_to 'Delete', article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete the article?" } %>
-        <%= heroicon_tag "trash" %>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 28 28" fill="currentColor" class="size-6 ml-2 w-5 h-5">
+          <path fill-rule="evenodd" d="M16.5 4.478v.227a48.816 48.816 0 0 1 3.878.512.75.75 0 1 1-.256 1.478l-.209-.035-1.005 13.07a3 3 0 0 1-2.991 2.77H8.084a3 3 0 0 1-2.991-2.77L4.087 6.66l-.209.035a.75.75 0 0 1-.256-1.478A48.567 48.567 0 0 1 7.5 4.705v-.227c0-1.564 1.213-2.9 2.816-2.951a52.662 52.662 0 0 1 3.369 0c1.603.051 2.815 1.387 2.815 2.951Zm-6.136-1.452a51.196 51.196 0 0 1 3.273 0C14.39 3.05 15 3.684 15 4.478v.113a49.488 49.488 0 0 0-6 0v-.113c0-.794.609-1.428 1.364-1.452Zm-.355 5.945a.75.75 0 1 0-1.5.058l.347 9a.75.75 0 1 0 1.499-.058l-.346-9Zm5.48.058a.75.75 0 1 0-1.498-.058l-.347 9a.75.75 0 0 0 1.5.058l.345-9Z" clip-rule="evenodd" />
+        </svg>
       </button>
-</div>
+      </div>
+    </div>
+  
 </div>
 <br>
