--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,6 @@
-<div class="grid items-center justify-between bg-white border shadow-lg rounded-lg w-30 p-4 mt-5">
-        <h3 class="mb-2 text-2xl font-bold tracking-tight text-sky-400 text-center">New article</h3>
+<h3 class="mb-2 text-2xl font-bold tracking-tight text-sky-400 text-center">New article</h3>
+<div class="grid items-center justify-between bg-white border shadow-lg rounded-lg p-4 mt-5 w-1/3">
+        
         <%= render "form", article: @article %>
          <%= link_to "Back to articles", articles_path, class:"p-4 font-bold text-green-500" %>
 <br>
