changed new article card layout

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,14 +11,14 @@
    </div>
  <% end %>
 
-<div class="container p-4 font-bold">
+<div class="container font-bold p-16">
  <div class="field">
    <%= form.label :title, class:"pt-3" %>
    <%= form.text_field :title %>
  </div>
 
 
- <div class="field" >
+ <div class="field">
    <%= form.label :body, class:"pt-3"  %>
    <%= form.text_area :body %>
  </div>
