--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,10 @@
-<h3 class="mb-2 text-2xl font-bold tracking-tight text-sky-400 text-center">New article</h3>
-<div class="grid items-center justify-between bg-white border shadow-lg rounded-lg p-4 mt-5 w-1/3">
-        
-        <%= render "form", article: @article %>
-         <%= link_to "Back to articles", articles_path, class:"p-4 font-bold text-green-500" %>
-<br>
+<h3 class="text-4xl font-bold text-sky-400 text-center mt-12 mb-8">New article</h3>
+<a href="<%= articles_path %>" class="flex hover:text-sky-600">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20" stroke-width="1.5" stroke="currentColor" class="size-6 text-sky-400 mt-1 hover:text-sky-600">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+  </svg>
+  <span class="flex justify-end font-bold text-sky-300 text-2xl pl-2 hover:text-sky-600">Back to articles</span>
+</a>
+<div class="flex justify-center items-center bg-white border shadow-lg rounded-lg mt-8 w-1/2 ml-96 h-80">
+  <%= render "form", article: @article %>
 </div>
