--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -11,7 +11,7 @@
    </div>
  <% end %>
 
-<div class="container font-bold p-16">
+<div class="container font-bold">
  <div class="field">
    <%= form.label :title, class:"pt-3" %>
    <%= form.text_field :title %>
