--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,23 +1,26 @@
-<div class="container">
-<h1 class="text-2xl">Editing article</h1>
-
+<h3 class="text-4xl font-bold text-sky-400 text-center mt-12 mb-8">Edit an article</h3>
+<a href="<%= articles_path %>" class="flex hover:text-sky-600">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20" stroke-width="1.5" stroke="currentColor" class="size-6 text-sky-400 mt-1 hover:text-sky-600">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+  </svg>
+  <span class="flex justify-end font-bold text-sky-300 text-2xl pl-2 hover:text-sky-600">Back to articles</span>
+</a>
+<div class="grid bg-white border shadow-lg rounded-lg mt-8 w-1/2 ml-96 p-12">
+  <div class="pl-16 pt-4">
 <% if @article.image.attached? %>
-<td><%= image_tag @article.image.variant(resize_to_fit: [200, 200]) %></td>
-<p>
+<%= image_tag @article.image.variant(resize_to_fit: [200, 200]) %>
   <strong>File:</strong>
     <%= @article.image.filename %>
   <% else %>
     No file attached.
   <% end %>
-</p>
 <%= render "form", article: @article %>
-<button class="text-red-600 font-bold p-2 rounded-full">
+<button type="button" class="text-red-600 font-semibold shadow-lg rounded-lg border border-red-600 ml-96 p-2 hover:bg-red-600 hover:text-white">
 <%= link_to "Delete this article", article_path(@article), data: {
 turbo_method: :delete,
 turbo_confirm: "Are you sure you want to delete the article?"
 } %>
 </button>
-<button class="bg-bermuda font-bold p-2 rounded-full">
-<%= link_to 'Back to Articles', articles_path %>
-</button>
+
+</div>
 </div>
