--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container grid place-items-center min-h-screen">
-  <h1 class="text-2xl text-center font-bold mb-4">Articles</h1>
+  <h3 class="text-4xl font-bold text-sky-400 text-center mt-12 mb-8">Articles</h3>
   <button class="bg-blue-400 hover:bg-blue-700 text-white font-bold py-2 px-24 rounded-full mb-4">
     <%= link_to 'New Article', new_article_path %>
   </button>
