--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,14 @@
+<h3 class="text-4xl font-bold text-sky-400 text-center mt-12 mb-8">Article card</h3>
+<a href="<%= articles_path %>" class="flex hover:text-sky-600">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20" stroke-width="1.5" stroke="currentColor" class="size-6 text-sky-400 mt-1 hover:text-sky-600">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
+  </svg>
+  <span class="flex justify-end font-bold text-sky-300 text-2xl pl-2 hover:text-sky-600">Back to articles</span>
+</a>
 
 <div class="grid bg-white border shadow-lg rounded-lg mt-8 w-1/2 ml-96 h-80 p-12">
   <div class="pl-16 pt-4">
 <h1 class="font-bold"><%= @article.title %></h1>
-
 
 <p class=pt-4><%= @article.body %></p>
 <p>Status: <%= @article.published ? 'Published' : 'Draft' %></p>
