--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,6 +13,11 @@
 <p class=pt-4><%= @article.body %></p>
 <p>Status: <%= @article.published ? 'Published' : 'Draft' %></p>
 
+<p>
+  <strong>Author:</strong>
+  <%= @article.user ? @article.user.email : "Autor anonimowy" %>
+</p>
+
 <% if @article.image.attached? && @article.image.persisted? %>
 <%= image_tag @article.image.variant(resize_to_fit: [200, 200]) %>
 
@@ -25,8 +30,8 @@
 </p>
 
 <div class="pt-4 flex flex-col items-end">
-<%= link_to 'Edit', edit_article_path(@article) %> 
-<%= link_to 'Back to Articles', articles_path %>
+<%= link_to 'Edit', edit_article_path(@article) if @article.user == current_user %> |
+<%= link_to 'Back', articles_path %>
 <%= link_to "Delete this article", articles_path(@article), data: {
 turbo_method: :delete,
 turbo_confirm: "Are you sure you want to delete the article?"
@@ -34,3 +39,9 @@ turbo_confirm: "Are you sure you want to delete the article?"
 </div>
 </div>
 </div>
+
+
+
+
+
+
