--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,33 +10,30 @@
      </ul>
    </div>
  <% end %>
-
-<div class="container font-bold">
+ 
  <div class="field">
-   <%= form.label :title, class:"pt-3" %>
-   <%= form.text_field :title %>
+   <%= form.label :title, class:"text-bold py-2" %>
+   <%= form.text_field :title, class:"mt-1 p-4 w-full text-base font-medium bg-slate-100 text-gray-900 col-span-6 rounded-xl" %>
  </div>
 
 
  <div class="field">
-   <%= form.label :body, class:"pt-3"  %>
-   <%= form.text_area :body %>
+   <%= form.label :body, class:"text-bold py-2"  %>
+   <%= form.text_field :title, class:"mt-1 p-4 w-full text-base font-medium bg-slate-300 text-gray-900 col-span-6 rounded-xl" %>
  </div>
 
 
  <div class="field">
-   <%= form.label :published, class:"pt-3" %>
+   <%= form.label :published, class:"text-bold py-2" %>
    <%= form.check_box :published %>
  </div>
 
 
- <div class="field">
- <%= form.file_field :image, class:"pt-3" %>
- </div>
-
-
- <div class="actions">
-   <%= form.submit %>
- </div>
- </div>
+  <div class="field">
+    <%= form.file_field :image, class:"text-bold py-2" %>
+  </div>
+  
+  <div class="text-green-600 font-semibold transition-colors duration-300 shadow-lg rounded-lg border border-green-600 w-fit my-4 p-2 hover:bg-green-600 hover:text-white hover:cursor-pointer">
+    <%= form.submit %>
+  </div>
 <% end %>
