--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,15 @@
-<div class="container grid place-items-center min-h-screen">
-  <h3 class="text-4xl font-bold text-sky-400 text-center mt-12 mb-8">Articles</h3>
-  <button class="bg-blue-400 hover:bg-blue-700 text-white font-bold py-2 px-24 rounded-full mb-4">
-    <%= link_to 'New Article', new_article_path %>
-  </button>
-  <div class="w-full">
-    <% @articles.each do |article| %>
-      <%= render partial: "article", locals: { article: article } %>
-    <% end %>
+<div class="container flex flex-col justify-center w-1/2 mx-auto">
+  <div class="flex-col min-h-screen space-y-4">
+    <h3 class="text-4xl font-bold italic text-slate-700 text-left my-4 py-4">Articles</h3>
+      <%= link_to new_article_path, class: "bg-blue-400 transitions-colors duration-300 hover:bg-blue-700 text-white font-bold rounded-full mb-4 px-3 py-4" do %>
+        <i class="fa-solid fa-scroll"></i>
+        <i class="fa-solid fa-plus"></i>
+      <% end %>
+    <div class="container flex flex-col">
+      <% @articles.each do |article| %>
+        <%= render partial: "article", locals: { article: article } %>
+      <% end %>
+      <hr>
+    </div>
   </div>
 </div>
-
-
