--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,10 +1,12 @@
-<h3 class="text-4xl font-bold text-sky-400 text-center mt-12 mb-8">New article</h3>
 <a href="<%= articles_path %>" class="flex hover:text-sky-600">
   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20" stroke-width="1.5" stroke="currentColor" class="size-6 text-sky-400 mt-1 hover:text-sky-600">
     <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5 3 12m0 0 7.5-7.5M3 12h18" />
   </svg>
-  <span class="flex justify-end font-bold text-sky-300 text-2xl pl-2 hover:text-sky-600">Back to articles</span>
+  <span class="font-bold text-sky-300 text-2xl pl-2 hover:text-sky-600">Back to articles</span>
 </a>
-<div class="flex justify-center items-center bg-white border shadow-lg rounded-lg mt-8 w-1/2 ml-96 h-80">
-  <%= render "form", article: @article %>
+<div class="container flex flex-col justify-center w-1/2 mx-auto">
+  <h3 class="text-4xl font-bold italic text-slate-700 text-left my-4 py-4">New article</h3>
+  <div class="flex flex-col justify-center bg-white border shadow-lg rounded-lg w-full p-4">
+    <%= render "form", article: @article %>
+  </div>
 </div>
