--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,14 +12,14 @@
  <% end %>
  
  <div class="field">
-   <%= form.label :title, class:"text-bold py-2" %>
+   <%= form.label :title, class:"text-bold py-2 title" %>
    <%= form.text_field :title, class:"mt-1 p-4 w-full text-base font-medium bg-slate-100 text-gray-900 col-span-6 rounded-xl" %>
  </div>
 
 
  <div class="field">
-   <%= form.label :body, class:"text-bold py-2"  %>
-   <%= form.text_field :title, class:"mt-1 p-4 w-full text-base font-medium bg-slate-300 text-gray-900 col-span-6 rounded-xl" %>
+   <%= form.label :body, class:"text-bold py-2 body"  %>
+   <%= form.text_field :body, class:"mt-1 p-4 w-full text-base font-medium bg-slate-300 text-gray-900 col-span-6 rounded-xl" %>
  </div>
 
 
